--- a/secondPaper/tex/introduction.tex
+++ b/secondPaper/tex/introduction.tex
@@ -18,7 +18,7 @@ estimates can provide an important evidence base to encourage new
 construction, retrofits, land use policy, and programatic funding to
 support active transportation. Particularly in places with poor
 attainmnet of the physical activity guidelines, such investments can
-be importnat pieces of lareger population health interventions that
+be important pieces of larger population health interventions that
 have effective and long-lasting impacts.
 
 ITHIM is a statistical model that integrates data on travel patterns,
