--- a/secondPaper/tex/introduction.tex
+++ b/secondPaper/tex/introduction.tex
@@ -32,3 +32,5 @@ The ITHIM model uses comparative risk assessment through which it
 formulates a change in the disease burden, resulting from the shift in
 the exposure distribution from a baseline scenario to an alternative
 scenario.
+
+Previous work has found variation in active transportation at the national, state, and city geographic scale to correspond with less obesity \cite{pucher2010}. 
